--- a/templates/layout.html
+++ b/templates/layout.html
@@ -21,14 +21,14 @@
                             <span class="navbar-toggler-icon"></span>
                         </button>
 
-                        <a class="navbar-brand d-flex align-items-end ms-3 ms-sm-0" href="/">
+                        <a class="navbar-brand d-flex align-items-end ms-3 ms-lg-0" href="/">
                             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="50" height="50" viewBox="0 0 1024 1024">
                                 <path fill="currentColor" d="M276.992 159.278C280.189 163.327 290.717 198.922 293.116 206.343L320.21 290.136L436.477 646.798L471.706 754.336C478.282 774.411 484.429 794.79 491.783 814.59L458.903 814.61C454.152 798.535 448.486 782.634 443.235 766.712L414.254 678.592L323.441 399.963L295.769 314.442C289.66 295.65 283.286 276.911 277.612 257.984C275.742 259.453 251.353 338.326 247.769 349.52L145.42 665.901L111.727 768.587C106.673 783.962 101.21 799.216 96.4701 814.69C85.6954 814.587 74.209 813.703 63.535 814.982C70.6867 794.586 77.0577 773.778 83.7538 753.22L116.712 652.527L218.75 338.597L260.63 209.011L270.834 177.06C272.686 171.228 274.272 164.751 276.992 159.278Z"/>
                                 <path fill="currentColor" d="M748.652 159.654C750.1 160.645 750.5 161.827 751.131 163.446C757.448 179.643 762.227 196.806 767.615 213.342L799.913 312.853L907.016 641.105L941.864 747.882C949.06 770.082 955.699 792.761 963.926 814.586C953.136 814.551 942.347 814.595 931.558 814.72L749.851 258.261L749.305 258.223C747.09 262.214 746.093 267.606 744.722 272.013C742.142 280.24 739.518 288.453 736.848 296.652L699.474 413.461C656.603 547.453 612.878 681.171 568.3 814.605C557.635 814.56 546.357 813.756 535.77 814.883C541.558 798.513 546.594 781.781 552.037 765.28L595.572 632.094L748.652 159.654Z"/>
                                 <path fill="currentColor" d="M227.537 606.997C238.233 606.828 248.931 606.819 259.627 606.969L300.521 740.616L314.72 787.176C317.497 796.282 319.974 805.634 323.333 814.542L291.727 814.69C288.402 805.355 285.672 795.68 282.699 786.222L263.835 725.078C251.807 685.707 239.187 646.479 227.537 606.997Z"/>
                                 <path fill="currentColor" d="M699.749 606.96C710.31 606.832 720.872 606.84 731.432 606.982L771.262 740.177C778.692 764.955 785.514 789.981 793.335 814.628C783.121 814.099 772.587 814.555 762.343 814.554C757.333 797.043 751.724 779.672 746.474 762.228L699.749 606.96Z"/>
                             </svg>
-                            <span class="my-1 d-none d-lg-inline ms-1">aaread</span>
+                            <span class="my-1 d-none d-lg-inline ms-1 sora">aaread</span>
                         </a>
                     </div>
 
@@ -40,25 +40,34 @@
                         </button>
 
                         <!-- user sign in button -->
-                        <button class="btn btn-outline-secondary ms-2" id="signInButton">
-                            <i class="bi bi-person-fill"></i>
-                        </button>
+                        {% if is_loggedin %}
+                            <button class="btn btn-outline-secondary ms-2" id="logInButton">
+                                <i class="bi bi-person-fill"></i>
+                            </button>
+                        {% else %}
+                            <a class="btn btn-outline-primary ms-2 sora" href="/login">
+                                <i class="bi bi-person-fill"></i> Log In
+                            </a>
+                        {% endif %}
+                        
                     </div>
 
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <div class="collapse navbar-collapse ms-lg-3" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
+                            <li class="nav-item sora">
                                 <a class="nav-link {% if request.path == '/' %}active{% endif %}" {% if request.path == '/' %}aria-current="page"{% endif %} href="/" >home</a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item sora">
                                 <a class="nav-link {% if request.path.startswith('/novels') %}active{% endif %}" {% if request.path.startswith('/novels') %}aria-current="page"{% endif %} href="/novels">novels</a>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item sora">
                                 <a class="nav-link {% if request.path.startswith('/library') %}active{% endif %}" {% if request.path.startswith('/library') %}aria-current="page"{% endif %} href="/library">library</a>
                             </li>
-                            <li class="nav-item">
+                            {% if is_admin %}
+                            <li class="nav-item sora">
                                 <a class="nav-link {% if request.path.startswith('/upload') %}active{% endif %}" {% if request.path.startswith('/upload') %}aria-current="page"{% endif %} href="/upload">upload</a>
                             </li>
+                            {% endif %}
                         </ul>
                     </div>
                 </div>
@@ -67,8 +76,26 @@
 
         <!-- Main content area -->
         <main class="flex-grow-1">
-            {% block content %}
+            {% block main %}
             {% endblock %}
+            
+            <!-- Flash Message Toast -->
+            <div class="position-fixed p-3 w-100 bottom-0" style="z-index: 1100;">
+                <div id="flash-container" class="d-flex flex-column align-items-center align-items-lg-end">
+                    {% with messages = get_flashed_messages(with_categories=true) %}
+                        {% if messages %}
+                            {% for category, message in messages %}
+                                <div class="toast show my-1" role="alert" aria-live="assertive" aria-atomic="true">
+                                    <div class="toast-body alert alert-{{ category }} mb-0">
+                                        {{ message }}
+                                        <button type="button" class="btn-close float-end" data-bs-dismiss="toast" aria-label="Close"></button>
+                                    </div>
+                                </div>
+                            {% endfor %}
+                        {% endif %}
+                    {% endwith %}
+                </div>
+            </div>
         </main>
 
         <!-- Footer -->
@@ -82,5 +109,6 @@
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
         <script src="{{ url_for('static', filename='script.js') }}"></script>
+        {% block script %}{% endblock %}
     </body>
 </html>
