--- a/static/styles.css
+++ b/static/styles.css
@@ -47,19 +47,20 @@ path {
 }
 
 .sora {
-    font-family: 'Sora', sans-serif;
+  font-family: 'Sora', sans-serif;
 }
 
 .nav-link {
-    transition: color 0.3s ease;
+  color: var(--bg-body-tertiary) !important;
+  transition: color 0.3s ease !important;
 }
 
 .nav-link:hover {
-    color: #5C6BC0 !important;
+  color: #5C6BC0 !important;
 }
 
 .nav-link.active {
-    color: #3F51B5 !important;
+  color: #3F51B5 !important;
 }
 
 @media (min-width: 992px) {
@@ -96,3 +97,52 @@ path {
   text-decoration: underline !important; /* optional, underline on hover */
 }
 
+/* ========== sidebar ========== */
+
+#sidebar {
+  max-width: 250px;
+  min-width: 250px;
+  height: 100vh; /* Full viewport height */
+  transition: margin-left 0.35s ease-in-out;
+  z-index: 1111;
+}
+
+#sidebar.collapsed {
+  margin-left: -250px;
+}
+
+.main {
+  flex: 1;
+  transition: margin-left 0.35s ease-in-out;
+}
+
+/* ========== sidebar active ========== */
+
+.custom-active {
+  border: 0 !important;
+  border-left: 2px solid #3F51B5 !important;
+}
+
+.nav-link.custom-active {
+    color: #3F51B5 !important;
+}
+
+/* accordion */
+
+.accordion-flush .accordion-item {
+    border: 0 !important;
+}
+
+.accordion-button {
+    border: none !important;
+    box-shadow: none !important;
+    color: var(--bg-body-tertiary) !important;
+}
+
+.sidebar-text {
+  max-width: 200px;
+}
+
+.offcanvas .sidebar-text {
+  max-width: none;
+}
