--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main %}
-    <div class="container my-5">
+    <div class="container">
         <div class="row">
             <div class="col-12 col-lg-8">
                 <div class="bg-body shadow rounded p-4 mb-3">
