--- a/templates/public/layout.html
+++ b/templates/public/layout.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<!-- public -->
 <html lang="en">
     <head>
         <meta charset="UTF-8">
@@ -11,7 +11,7 @@
         <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
         <title>{% block title %}{% endblock %}</title>
     </head>
-    <body class="d-flex flex-column min-vh-100">
+    <body class="d-flex flex-column min-vh-100 sora">
         <!-- Header with navigation -->
         <header>
             <nav class="navbar navbar-expand-lg bg-body-tertiary shadow-sm border-bottom">
@@ -28,7 +28,7 @@
                                 <path fill="currentColor" d="M227.537 606.997C238.233 606.828 248.931 606.819 259.627 606.969L300.521 740.616L314.72 787.176C317.497 796.282 319.974 805.634 323.333 814.542L291.727 814.69C288.402 805.355 285.672 795.68 282.699 786.222L263.835 725.078C251.807 685.707 239.187 646.479 227.537 606.997Z"/>
                                 <path fill="currentColor" d="M699.749 606.96C710.31 606.832 720.872 606.84 731.432 606.982L771.262 740.177C778.692 764.955 785.514 789.981 793.335 814.628C783.121 814.099 772.587 814.555 762.343 814.554C757.333 797.043 751.724 779.672 746.474 762.228L699.749 606.96Z"/>
                             </svg>
-                            <span class="my-1 d-none d-lg-inline ms-1 sora">aaread</span>
+                            <span class="my-1 d-none d-lg-inline ms-1">aaread</span>
                         </a>
                     </div>
 
@@ -49,26 +49,26 @@
                                 <div class="collapse position-absolute end-0 mt-2" id="userDropdown" style="width: 250px; z-index: 1100;">
                                     <div class="card card-body">
                                         <ul class="list-unstyled mb-0">
-                                            <li><h5 class="fw-semibold mb-2 sora">Howdy, {{ username }}! 👋</h5></li>
+                                            <li><h5 class="fw-semibold mb-2">Howdy, {{ username }}! 👋</h5></li>
                                             <hr class="my-2">
                                             <div class="d-flex justify-content-between align-items-center mb-2">
-                                                <span class="sora">Role:</span>
+                                                <span>Role:</span>
                                                 <span class="badge bg-secondary">{{ 'Admin' if is_admin else 'User' }}</span>
                                             </div>
                                             <hr class="my-2">
                                             <li>
-                                                <a class="btn btn-outline-primary w-100 sora my-1" href="/settings">
+                                                <a class="btn btn-outline-primary w-100 my-1" href="/settings">
                                                     <i class="bi bi-gear-fill"></i> Settings
                                                 </a>
                                             </li>
                                             <li>
-                                                <a class="btn btn-outline-danger w-100 sora my-1" href="{{ url_for('logout', next=request.path) }}">
+                                                <a class="btn btn-outline-danger w-100 my-1" href="{{ url_for('logout', next=request.path) }}">
                                                     <i class="bi bi-box-arrow-right"></i> Log Out
                                                 </a>
                                             </li>
                                             {% if is_admin %}
                                             <li>
-                                                <a class="btn btn-outline-success w-100 sora my-1" href="/admin">
+                                                <a class="btn btn-outline-success w-100 my-1" href="/admin">
                                                     <i class="bi bi-shield-lock-fill"></i> Admin Panel
                                                 </a>
                                             </li>
@@ -79,7 +79,7 @@
                             </div>
                         {% else %}
                             <!-- user sign in button -->
-                            <a class="btn btn-outline-primary ms-2 sora" href="/login">
+                            <a class="btn btn-outline-primary ms-2" href="/login">
                                 <i class="bi bi-person-fill"></i> Log In
                             </a>
                         {% endif %}
@@ -88,20 +88,15 @@
 
                     <div class="collapse navbar-collapse ms-lg-3" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item sora">
+                            <li class="nav-item">
                                 <a class="nav-link {% if request.path == '/' %}active{% endif %}" {% if request.path == '/' %}aria-current="page"{% endif %} href="/" >home</a>
                             </li>
-                            <li class="nav-item sora">
+                            <li class="nav-item">
                                 <a class="nav-link {% if request.path.startswith('/novels') %}active{% endif %}" {% if request.path.startswith('/novels') %}aria-current="page"{% endif %} href="/novels">novels</a>
                             </li>
-                            <li class="nav-item sora">
+                            <li class="nav-item">
                                 <a class="nav-link {% if request.path.startswith('/library') %}active{% endif %}" {% if request.path.startswith('/library') %}aria-current="page"{% endif %} href="/library">library</a>
                             </li>
-                            {% if is_admin %}
-                            <li class="nav-item sora">
-                                <a class="nav-link {% if request.path.startswith('/upload') %}active{% endif %}" {% if request.path.startswith('/upload') %}aria-current="page"{% endif %} href="/upload">upload</a>
-                            </li>
-                            {% endif %}
                         </ul>
                     </div>
                     
@@ -110,27 +105,9 @@
         </header>
 
         <!-- Main content area -->
-        <main class="flex-grow-1">
+        <main>
             {% block main %}
             {% endblock %}
-            
-            <!-- Flash Message Toast -->
-            <div class="position-fixed p-3 w-100 bottom-0" style="z-index: 1100;">
-                <div id="flash-container" class="d-flex flex-column align-items-center align-items-lg-end">
-                    {% with messages = get_flashed_messages(with_categories=true) %}
-                        {% if messages %}
-                            {% for category, message in messages %}
-                                <div class="toast show my-1" role="alert" aria-live="assertive" aria-atomic="true">
-                                    <div class="toast-body alert alert-{{ category }} mb-0">
-                                        {{ message }}
-                                        <button type="button" class="btn-close float-end" data-bs-dismiss="toast" aria-label="Close"></button>
-                                    </div>
-                                </div>
-                            {% endfor %}
-                        {% endif %}
-                    {% endwith %}
-                </div>
-            </div>
         </main>
         
         <!-- Footer -->
@@ -141,6 +118,24 @@
                 <p class="fs-6 my-0">&copy; anthonyA1214 2025</p>
             </div>
         </footer>
+
+        <!-- Flash Message Toast -->
+        <div class="position-fixed p-3 w-100 bottom-0" style="z-index: 1100;">
+            <div id="flash-container" class="d-flex flex-column align-items-center align-items-lg-end">
+                {% with messages = get_flashed_messages(with_categories=true) %}
+                    {% if messages %}
+                        {% for category, message in messages %}
+                            <div class="toast show my-1" role="alert" aria-live="assertive" aria-atomic="true">
+                                <div class="toast-body alert alert-{{ category }} mb-0">
+                                    {{ message }}
+                                    <button type="button" class="btn-close float-end" data-bs-dismiss="toast" aria-label="Close"></button>
+                                </div>
+                            </div>
+                        {% endfor %}
+                    {% endif %}
+                {% endwith %}
+            </div>
+        </div>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
         <script src="{{ url_for('static', filename='script.js') }}"></script>
