--- a/templates/public/login.html
+++ b/templates/public/login.html
@@ -25,9 +25,9 @@
 
                         <div class="input-group mb-1">
                             <span class="input-group-text" id="username-email-addon"><i class="bi bi-person-circle"></i></span>
-                            <input id="usernameEmail" type="text" class="form-control" name="usernameEmail" placeholder="Username or email" aria-label="Username or email" aria-describedby="username-email-addon  usernameEmailError">
+                            <input id="username_email" type="text" class="form-control" name="username_email" placeholder="Username or email" aria-label="Username or email" aria-describedby="username-email-addon  username_emailError">
                         </div>
-                        <p class="text-danger small mb-3" id="usernameEmailError"></p>
+                        <p class="text-danger small mb-3" id="username_emailError"></p>
 
                         <div class="input-group mb-1">
                             <span class="input-group-text" id="password-addon"><i class="bi bi-lock"></i></span>
