--- a/templates/admin/layout.html
+++ b/templates/admin/layout.html
@@ -46,7 +46,7 @@
                                            
                         <!-- manage novels -->
                         <li class="nav-item">
-                            <a href="{{ url_for('admin.index') }}" class="nav-link {% if request.path.startswith('/admin/novels') %}custom-active{% endif %}" 
+                            <a href="{{ url_for('admin.view_novels') }}" class="nav-link {% if request.path.startswith('/admin/novels') %}custom-active{% endif %}" 
                             {% if not request.path.startswith('/admin/novels') %}aria-current="page"{% endif %}>
                                 <i class="bi bi-collection me-1"></i> Manage Novels
                             </a>
@@ -95,11 +95,11 @@
                         <!-- home -->
                         <li class="nav-item">
                             <a href="{{ url_for('admin.index') }}" class="nav-link {% if request.path == '/admin/' %}custom-active{% endif %}" 
-                            {% if request.path.startswith('/admin') %}aria-current="page"{% endif %}>
+                            {% if request.path == '/admin/' %}aria-current="page"{% endif %}>
                                 <i class="bi bi-house me-1"></i> Home
                             </a>
                         </li>         
-                                          
+                                           
                         <!-- manage novels -->
                         <li class="nav-item">
                             <a href="{{ url_for('admin.index') }}" class="nav-link {% if request.path.startswith('/admin/novels') %}custom-active{% endif %}" 
@@ -112,13 +112,13 @@
                         <li class="nav-item">
                             <a href="{{ url_for('admin.index') }}" class="nav-link {% if '/chapters' in request.path %}custom-active{% endif %}" 
                             {% if '/chapters' in request.path %}aria-current="page"{% endif %}>
-                                <i class="bi bi-journal-bookmark me-1"></i> Manage Novels
+                                <i class="bi bi-collection me-1"></i> Manage Chapters
                             </a>
                         </li>
 
                         <!-- manage genres -->
                         <li class="nav-item">
-                            <a href="{{ url_for('admin.index') }}" class="nav-link {% if request.path.startswith('/admin/genres') %}custom-active{% endif %}" 
+                            <a href="{{ url_for('admin.view_genres') }}" class="nav-link {% if request.path.startswith('/admin/genres') %}custom-active{% endif %}" 
                             {% if request.path.startswith('/admin/genres') %}aria-current="page"{% endif %}>
                                 <i class="bi bi-tags me-1"></i> Manage Genres
                             </a>
