view chapter page 70% done

--- a/templates/admin/genres/list.html
+++ b/templates/admin/genres/list.html
@@ -6,8 +6,8 @@
 
 {% block main %}
     <div class="d-flex justify-content-between align-items-center text-center">
-        <p class="sora fs-3 ms-0 ms-md-5 d-inline-block border-bottom border-2 mb-0" style="border-color: #3F51B5 !important;">Genres</p>
-        <button class="btn btn-primary sora me-0 me-md-5 mb-0" data-bs-toggle="modal" data-bs-target="#addGenre">
+        <p class="fs-3 ms-0 ms-md-5 d-inline-block border-bottom border-2 mb-0" style="border-color: #3F51B5 !important;">Genres</p>
+        <button class="btn btn-primary me-0 me-md-5 mb-0" data-bs-toggle="modal" data-bs-target="#addGenre">
             <i class="bi bi-plus"></i> Add New
         </button>
     </div>
