--- a/static/styles.css
+++ b/static/styles.css
@@ -1,24 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap');
 
 .btn-outline-primary {
-    --bs-btn-color: #3F51B5;
-    --bs-btn-border-color: #3F51B5;
+  --bs-btn-color: #3F51B5;
+  --bs-btn-border-color: #3F51B5;
 
-    --bs-btn-hover-color: #fff;
-    --bs-btn-hover-bg: #3F51B5;
-    --bs-btn-hover-border-color: #3F51B5;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #3F51B5;
+  --bs-btn-hover-border-color: #3F51B5;
 
-    --bs-btn-focus-shadow-rgb: 63, 81, 181;
-    --bs-btn-focus-shadow: 0 0 0 0.2rem rgba(63, 81, 181, 0.25);
-    
-    --bs-btn-active-color: #fff;
-    --bs-btn-active-bg: #3F51B5;
-    --bs-btn-active-border-color: #3F51B5;
-    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-focus-shadow-rgb: 63, 81, 181;
+  --bs-btn-focus-shadow: 0 0 0 0.2rem rgba(63, 81, 181, 0.25);
+  
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #3F51B5;
+  --bs-btn-active-border-color: #3F51B5;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
 
-    --bs-btn-disabled-color: #3F51B5;
-    --bs-btn-disabled-bg: transparent;
-    --bs-btn-disabled-border-color: #3F51B5;
+  --bs-btn-disabled-color: #3F51B5;
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: #3F51B5;
 }
 
 .btn-primary {
@@ -83,8 +83,8 @@ path {
 
 /* ========== Form styles ========== */
 .form-control:focus {
-    border-color: #3F51B5;
-    box-shadow: 0 0 0 0.2rem rgba(63, 81, 181, 0.25);
+  border-color: #3F51B5;
+  box-shadow: 0 0 0 0.2rem rgba(63, 81, 181, 0.25);
 }
 
 .auth-link a {
@@ -142,19 +142,19 @@ path {
 }
 
 .nav-link.custom-active {
-    color: #3F51B5 !important;
+  color: #3F51B5 !important;
 }
 
 /* accordion */
 
 .accordion-flush .accordion-item {
-    border: 0 !important;
+  border: 0 !important;
 }
 
 .accordion-button {
-    border: none !important;
-    box-shadow: none !important;
-    color: var(--bg-body-tertiary) !important;
+  border: none !important;
+  box-shadow: none !important;
+  color: var(--bg-body-tertiary) !important;
 }
 
 .sidebar-text {
@@ -166,6 +166,10 @@ path {
 }
 
 .col-actions {
-    width: 1%;
-    white-space: nowrap;
+  width: 1%;
+  white-space: nowrap;
+}
+
+.text-pre-wrap {
+  white-space: pre-wrap;
 }
