--- a/templates/admin/genres/list.html
+++ b/templates/admin/genres/list.html
@@ -6,63 +6,63 @@
 
 {% block main %}
     <div class="d-flex justify-content-between align-items-center text-center">
-        <p class="fs-3 ms-0 ms-md-5 d-inline-block border-bottom border-2 mb-0" style="border-color: #3F51B5 !important;">Genres</p>
+        <p class="fs-3 ms-0 ms-md-5 d-inline-block border-bottom border-2 mb-0" style="border-color: #3F51B5 !important;">Manage Genres</p>
         <button class="btn btn-primary me-0 me-md-5 mb-0" data-bs-toggle="modal" data-bs-target="#addGenre">
             <i class="bi bi-plus"></i> Add New
         </button>
     </div>
     <hr class="mx-auto mt-0 mb-3">
 
-        <!-- add modal -->
-        <div class="modal fade" id="addGenre" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="addGenreLabel" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered">
-                <div class="modal-content">
-                    <form method="POST" action="{{ url_for('admin.add_genre') }}" id="addGenreForm">
-                            <div class="modal-header">
-                                <h1 class="modal-title fs-5" id="addGenreLabel">Add New Genre</h1>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                            </div>
-                            <div class="modal-body">                     
-                                <div class="mb-3">
-                                    <label for="addGenreName" class="form-label">Genre Name</label>
-                                    <input type="text" class="form-control" id="addGenreName" name="addGenreName" placeholder="e.g., TS" required>
-                                </div>                      
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                                <button type="submit" class="btn btn-primary">Add Genre</button>
-                            </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-
-        <!-- edit modal -->
-        <div class="modal fade" id="editGenre" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="editGenreLabel" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered">
-                <div class="modal-content">
-
-                    <form method="POST" id="editGenreForm">
+    <!-- add modal -->
+    <div class="modal fade" id="addGenre" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="addGenreLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <form method="POST" action="{{ url_for('admin.add_genre') }}" id="addGenreForm">
                         <div class="modal-header">
-                            <h1 class="modal-title fs-5" id="editGenreLabel">Edit Genre</h1>
+                            <h1 class="modal-title fs-5" id="addGenreLabel">Add New Genre</h1>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
-                        <div class="modal-body">
-                            <input type="hidden" id="editGenreId">                    
+                        <div class="modal-body">                     
                             <div class="mb-3">
-                                <label for="editGenreName" class="form-label">Genre Name</label>
-                                <input type="text" class="form-control" id="editGenreName" name="editGenreName" placeholder="e.g., TS" required>
+                                <label for="addGenreName" class="form-label">Genre Name</label>
+                                <input type="text" class="form-control" id="addGenreName" name="addGenreName" placeholder="e.g., TS" required>
                             </div>                      
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                            <button type="submit" class="btn btn-primary">Save Changes</button>
+                            <button type="submit" class="btn btn-primary">Add Genre</button>
                         </div>
-                    </form>
-
-                </div>
+                </form>
             </div>
         </div>
+    </div>
+
+    <!-- edit modal -->
+    <div class="modal fade" id="editGenre" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="editGenreLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+
+                <form method="POST" id="editGenreForm">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="editGenreLabel">Edit Genre</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <input type="hidden" id="editGenreId">                    
+                        <div class="mb-3">
+                            <label for="editGenreName" class="form-label">Genre Name</label>
+                            <input type="text" class="form-control" id="editGenreName" name="editGenreName" placeholder="e.g., TS" required>
+                        </div>                      
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                        <button type="submit" class="btn btn-primary">Save Changes</button>
+                    </div>
+                </form>
+
+            </div>
+        </div>
+    </div>
 
     <!-- contents -->
     <div class="container">
@@ -98,7 +98,7 @@
         <div class="row mb-3">
             <div class="bg-body rounded shadow p-3">
                 
-                <div class="row px-3">
+                <div class="col-12 px-3">
                     <div class="table-responsive">
                         <table class="table table-hover">
 
@@ -106,7 +106,9 @@
                                 <tr>
                                     <th scope="col">ID</th>
                                     <th scope="col">Name</th>
-                                    <th scope="col" class="col-actions"></th>
+                                    <th scope="col" class="col-actions">
+                                        <span class="visually-hidden">Actions</span>
+                                    </th>
                                 </tr>
                             </thead>
                             <tbody>
