--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main %}
-    <div class="container">
+    <div class="container-sm my-5">
         <div class="row">
             <div class="col-12 mb-3">
                 <div id="aareadCarousel" class="carousel slide" data-bs-ride="carousel">
@@ -74,8 +74,10 @@
             <div class="col-12 col-lg-8">
                 <div class="bg-body shadow rounded p-3 mb-3">
                     <div class="row g-3">
-                        <div class="col-12 border-bottom">
-                                asdasddsadas
+                        <div class="col-12 border-bottom text-end">
+                            <a class="btn btn-sm btn-primary mb-3" href="{{ url_for('novels') }}">
+                                View all
+                            </a>
                         </div>
                         {% for novel in latest_novels %}
                             <div class="col-12 col-md-6 border-bottom">
@@ -83,12 +85,12 @@
                                     <div class="card h-100 border-0 pb-2 mb-3">
                                         <div class="row g-0">
                                             <!-- image left side -->
-                                            <div class="col-4">
-                                                <img src="{{ url_for('static', filename=novel.cover_image) if novel.cover_image else url_for('static', filename='uploads/placeholder.png')}}" class="rounded img-fluid object-fit-cover" alt="..." style="aspect-ratio: 2 / 3;">
+                                            <div class="col-4" style="aspect-ratio: 2 / 3;">
+                                                <img src="{{ url_for('static', filename=novel.cover_image) if novel.cover_image else url_for('static', filename='uploads/placeholder.png')}}" class="rounded img-fluid object-fit-cover w-100 h-100" alt="...">
                                             </div>
                                             <div class="col-8">
                                                 <div class="card-body">
-                                                    <p class="fs-6 fw-semibold card-title text-truncate">{{ novel.title }}</p>
+                                                    <p class="h6 card-title text-truncate">{{ novel.title }}</p>
                                                     <p class="card-text"></p>
                                                     
                                                 </div>
